elements added to two parts

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,41 @@
     <link rel="stylesheet" href="Styles/normalize.css">
     <title>Genesis</title>
 </head>
+
 <body>
-    
+    <main>
+        <div class="Part-1">
+            <img class="Logo" src="Images/Genesis-logo.svg" alt="Logo">
+            <h3 class="Title">Shooting Stars</h3>
+            <p class="Main info">Hello, I’m Bakhtiyar Sattarov,
+                product designer with experience
+                in studios and startups</p>
+            <h3 class="Quote">Design is about progress</h3>
+        </div>
+
+        <nav class="Nav-bar">
+            <ul>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <div class="Image-1">
+            <img src="Images/Collage.png" alt="Collage">
+        </div>
+
+       <div class="Part-2">
+        <p class="Info-2">We love work hard and explore new things that’s
+             why we cover lot of things. Check our service 
+             list and view details</p>
+             <h3 class="Service-1">Multimedia</h3>
+             <h3 class="Service-2">Interactive Design</h3>
+             <h3 class="Service-2">Branding</h3>
+             <h3 class="Service-4">Creative Design</h3>
+             <h3 class="Service-5">Packaging</h3>
+             <h3 class="Service-6">Coding</h3>
+       </div> 
+
+    </main>
 </body>
+
 </html>
