--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/index.css">
     <link rel="stylesheet" href="Styles/normalize.css">
     <title>Genesis</title>
@@ -12,37 +13,37 @@
 
 <body>
     <main>
-        <div class="Part-1">
-            <img class="Logo" src="Images/Genesis-logo.svg" alt="Logo">
-            <h3 class="Title">Shooting Stars</h3>
-            <p class="Main info">Hello, I’m Bakhtiyar Sattarov,
-                product designer with experience
-                in studios and startups</p>
-            <h3 class="Quote">Design is about progress</h3>
-        </div>
+        <img class="Logo" src="Images/Genesis-logo.svg" alt="Logo">
+        <h3 class="Title">Shooting Stars</h3>
+        <p class="Main-info">Hello, I’m Bakhtiyar Sattarov, <br>
+            product designer with experience <br>
+            in studios and startups</p>
 
-        <nav class="Nav-bar">
+        <h3 class="Quote">Design is about progress</h3>
+
+        <!--<nav class="Nav-bar">
             <ul>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li class="Nav-text">Projects</li>
+                <li class="Nav-text">Contact</li>
             </ul>
-        </nav>
+        </nav>-->
+
         <div class="Image-1">
-            <img src="Images/Collage.png" alt="Collage">
+            <img class="Image1" src="Images/Collage.png" alt="Collage">
         </div>
 
-       <div class="Part-2">
-        <p class="Info-2">We love work hard and explore new things that’s
-             why we cover lot of things. Check our service 
-             list and view details</p>
-             <h3 class="Service-1">Multimedia</h3>
-             <h3 class="Service-2">Interactive Design</h3>
-             <h3 class="Service-2">Branding</h3>
-             <h3 class="Service-4">Creative Design</h3>
-             <h3 class="Service-5">Packaging</h3>
-             <h3 class="Service-6">Coding</h3>
-       </div> 
 
+        <div class="Part-2">
+            <p class="Info-2">We love work hard and explore new things <br> that’s
+                why we cover lot of things. Check our <br> service
+                list and view details</p> </div>
+            <h3 class="Service1">Multimedia</h3>
+            <h3 class="Service1">Interactive Design</h3>
+            <h3 class="Service1">Branding</h3>
+            <h3 class="Service2">Creative Design</h3>
+            <h3 class="Service2">Packaging</h3>
+            <h3 class="Service2">Coding</h3>
+        
     </main>
 </body>
 
