--- a/index.html
+++ b/index.html
@@ -36,14 +36,46 @@
         <div class="Part-2">
             <p class="Info-2">We love work hard and explore new things <br> that’s
                 why we cover lot of things. Check our <br> service
-                list and view details</p> </div>
-            <h3 class="Service1">Multimedia</h3>
-            <h3 class="Service1">Interactive Design</h3>
-            <h3 class="Service1">Branding</h3>
-            <h3 class="Service2">Creative Design</h3>
-            <h3 class="Service2">Packaging</h3>
-            <h3 class="Service2">Coding</h3>
-        
+                list and view details</p>
+
+            <div class="Column-1">
+                <h3 class="Service1">Multimedia</h3>
+                <h3 class="Service1">Interactive Design</h3>
+                <h3 class="Service1">Branding</h3>
+            </div>
+
+            <div class="Column-2">
+                <h3 class="Service2">Creative Design</h3>
+                <h3 class="Service2">Packaging</h3>
+                <h3 class="Service2">Coding</h3>
+            </div>
+        </div>
+
+        <div class="Part-3">
+            <h3 class="Part-3-title">Awwwards</h3>
+            <div class="Box-1">
+                <h3 class="Part-3-title2">Site of the day</h3>
+            </div>
+            <div class="Box-2">
+                <h3 class="Part-3-title3">Best navigation</h3>
+            </div>
+            <div class="Box-3">
+                <h3 class="Part-3-title4">Genesis UI Kit</h3>
+                <p class="Part-3-info">Application that helps to <br> find nearest sport <br> centres</p>
+            </div>
+            <div class="Box-4">
+                <h3 class="Part-3-title5">Genesis Template</h3>
+                <p class="Part-3-info">Application that helps to <br> find nearest sport <br> centres</p>
+            </div>
+
+            <div class="Year-box">
+                <h3 class="Year1">2018</h3>
+            </div>
+            <div class="Year-box2">
+                <h3 class="Year2">2018</h3>
+            </div>
+        </div>
+
     </main>
 </body>
 
