--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
         <h3 class="Quote">Design is about progress</h3>
 
-        <!--<nav class="Nav-bar">
+        <!--<div class="Navbar">
             <ul>
                 <li class="Nav-text">Projects</li>
                 <li class="Nav-text">Contact</li>
             </ul>
-        </nav>-->
+        </div>-->
 
         <div class="Image-1">
             <img class="Image1" src="Images/Collage.png" alt="Collage">
@@ -75,6 +75,36 @@
                 <h3 class="Year2">2018</h3>
             </div>
         </div>
+
+        <div>
+            <div class="Part-4">
+                <h3 class="Part-3-title">CSSDesignAwards</h3>
+                <div class="Box-5">
+                    <h3 class="Part-3-title2">Site of the day</h3>
+                </div>
+                <div class="Box-6">
+                    <h3 class="Part-3-title3">Best navigation</h3>
+                </div>
+                <div class="Box-7">
+                    <h3 class="Part-3-title4">Genesis UI Kit</h3>
+                    <p class="Part-3-info">Application that helps to <br> find nearest sport <br> centres</p>
+                </div>
+                <div class="Box-8">
+                    <h3 class="Part-3-title5">Genesis Template</h3>
+                    <p class="Part-3-info">Application that helps to <br> find nearest sport <br> centres</p>
+                </div>
+
+                <div class="Year-box3">
+                    <h3 class="Year1">2017</h3>
+                </div>
+                <div class="Year-box4">
+                    <h3 class="Year2">2018</h3>
+                </div>
+            </div>
+
+            <div class="Footer">
+                <img src="Images/Footer.png" alt="Footer">
+            </div>
 
     </main>
 </body>
