--- a/index.html
+++ b/index.html
@@ -13,25 +13,32 @@
 
 <body>
     <main>
-        <img class="Logo" src="Images/Genesis-logo.svg" alt="Logo">
-        <h3 class="Title">Shooting Stars</h3>
-        <p class="Main-info">Hello, I’m Bakhtiyar Sattarov, <br>
-            product designer with experience <br>
-            in studios and startups</p>
-
-        <h3 class="Quote">Design is about progress</h3>
-
-        <!--<div class="Navbar">
-            <ul>
-                <li class="Nav-text">Projects</li>
-                <li class="Nav-text">Contact</li>
-            </ul>
-        </div>-->
-
-        <div class="Image-1">
-            <img class="Image1" src="Images/Collage.png" alt="Collage">
+        <div class="Logo">
+            <img src="Images/Genesis-logo.svg" alt="Logo">
         </div>
 
+        <div class="Button1">
+            <nav class="Button-text">Projects</nav>
+        </div>
+        <div class="Button2">
+            <nav class="Button-text">Contact</nav>
+        </div>
+
+        <div class="Title">
+            <h3 class="Title-text">Shooting Stars</h3>
+        </div>
+        <div class="Main-info">
+            <p class="Main-text">Hello, I’m Bakhtiyar Sattarov, <br>
+                product designer with experience <br>
+                in studios and startups</p>
+        </div>
+        <div class="Quote">
+            <h3 class="Quote-text">Design is about progress</h3>
+        </div>
+
+        <div class="Image-1">
+            <img src="Images/Collage.png" alt="Collage">
+        </div>
 
         <div class="Part-2">
             <p class="Info-2">We love work hard and explore new things <br> that’s
