final links connected

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         </div>
 
         <div class="Button1">
-            <nav class="Button-text">Projects</nav>
+            <nav>
+                <a class="Button-text" href="file:///Users/kamileandriekute/Desktop/Cross-browser-project2-master/index.html">Projects</a>
+            </nav>
         </div>
         <div class="Button2">
-            <nav class="Button-text">Contact</nav>
+            <nav>
+                <a class="Button-text" href="file:///Users/kamileandriekute/Desktop/Cross-browser-project3-master/index.html">Contact</a>
+            </nav>
         </div>
 
         <div class="Title">
