--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
         <div class="Button1">
             <nav>
-                <a class="Button-text" href="file:///Users/kamileandriekute/Desktop/Cross-browser-project2-master/index.html">Projects</a>
+                <a class="Button-text" href="projects.html">Projects</a>
             </nav>
         </div>
         <div class="Button2">
             <nav>
-                <a class="Button-text" href="file:///Users/kamileandriekute/Desktop/Cross-browser-project3-master/index.html">Contact</a>
+                <a class="Button-text" href="contact.html">Contact</a>
             </nav>
         </div>
 
