--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/normalize.css">
-    <link rel="stylesheet" href="Styles/contact.css">
+    <link rel="stylesheet" href="Styles/contact1.css">
     <title>Contact</title>
 </head>
 
